--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "A functional ECS game engine for javascript.",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
-  "license": "Apache-2.0",
+  "license": "MIT",
   "keywords": [],
   "scripts": {
     "dev": "vitest",
@@ -19,10 +19,21 @@
     "posttest": "npm run lint"
   },
   "devDependencies": {
+    "@types/json-stable-stringify": "^1.0.36",
     "@types/node": "20.8.2",
+    "@types/ramda": "^0.29.9",
     "gts": "^5.2.0",
     "tsup": "^8.0.1",
     "typescript": "~5.2.0",
     "vitest": "^1.1.2"
+  },
+  "dependencies": {
+    "@datastructures-js/queue": "^4.2.3",
+    "dependency-graph": "^1.0.0",
+    "json-stable-stringify": "^1.1.0",
+    "ramda": "^0.29.1"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
