--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,5 +14,5 @@ jobs:
           node-version: 20
 
       - run: npm ci
-      - run: npm lint
-      - run: npm test
+      - run: npm run lint
+      - run: npm run test
