--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
     "node/no-unpublished-import": [
       "error",
       {
-        "allowModules": ["vitest"]
+        "allowModules": ["vitest", "vite-tsconfig-paths"]
       }
     ]
   }
