--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gts": "^5.2.0",
     "tsup": "^8.0.1",
     "typescript": "~5.2.0",
+    "vite-tsconfig-paths": "^4.2.3",
     "vitest": "^1.1.2"
   },
   "dependencies": {
