--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "chaos",
   "version": "0.0.1",
   "description": "An ECS game engine for javascript.",
-  "main": "dist/src/index.js",
-  "types": "dist/src/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "license": "MIT",
   "keywords": [],
   "scripts": {
